rust/crates/rax-nmea/src/data/snapshots/rax_nmea__data__gns__test__gns_parsing1.snap
---
source: crates/rax-nmea/src/data/gns.rs
expression: gns
---
{
  "time": "11:22:57",
  "lat": 38.73733516666667,
  "lon": -9.140638,
  "pos_mode": [
    "Autonomous",
    "NotValid"
  ],
  "num_sv": 3,
  "hdop": 10.5,
  "alt": null,
  "sep": null,
  "diff_age": null,
  "diff_station": null,
  "nav_status": null
}
