rust/crates/rax-nmea/src/data/snapshots/rax_nmea__data__gns__test__gns_parsing2.snap
---
source: crates/rax-nmea/src/data/gns.rs
expression: gns
---
{
  "time": "18:16:04",
  "lat": null,
  "lon": null,
  "pos_mode": [
    "NotValid",
    "NotValid"
  ],
  "num_sv": 0,
  "hdop": 99.99,
  "alt": null,
  "sep": null,
  "diff_age": null,
  "diff_station": null,
  "nav_status": null
}
